# OmniChat

./: .gitignore
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: docker.rs  lib.rs  main.rs
apps/mobile/: package.json
apps/mobile/__create/: DeviceErrorBoundary.tsx
apps/mobile/polyfills/web/: alerts.web.tsx  statusBar.web.tsx
apps/mobile/src/__create/: fetch.ts
apps/mobile/src/app/: index.jsx
apps/web/: package-lock.json  package.json  vercel.json  vite.config.ts  wrangler.jsonc
apps/web/__create/: index.ts
apps/web/api/: index.js
apps/web/src/__create/: PolymorphicComponent.tsx
apps/web/src/api/: index.js
apps/web/src/app/: entry.server.tsx  global.css  layout.jsx  page.jsx  root.tsx  routes.ts
apps/web/src/app/api/agent/: route.js
apps/web/src/app/api/archives/: route.js
apps/web/src/app/api/audio/: route.js
apps/web/src/app/api/docs/: route.js
apps/web/src/app/api/files/: route.js
apps/web/src/app/api/health/: route.js
apps/web/src/app/api/images/: route.js
apps/web/src/app/api/local/: route.js
apps/web/src/app/api/mcp/: route.js
apps/web/src/app/api/models/: route.js
apps/web/src/app/api/presentations/: route.js
apps/web/src/app/api/utils/: sql.js  (+5 more)
apps/web/src/components/: ArtifactPanel.jsx  ChatWorkspace.jsx  CompareView.jsx  Composer.jsx  ContextMenu.jsx  MessageBubble.jsx  ModelSelector.jsx  SandboxRunner.jsx  SettingsModal.jsx  Sidebar.jsx
apps/web/src/components/files/: FilePreview.jsx
apps/web/src/utils/: tauri.js
shared/: design-mode.ts
(+31 files in other folders)
