[package]
name = "omniclaude-desktop"
version = "1.0.0"
description = "OmniClaude Desktop - Universal AI Workspace"
authors = ["OmniClaude"]
edition = "2021"

[lib]
name = "omniclaude_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "3"
bollard = "0.18"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
whoami = "1"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
